# mcp-screenshot

./: .env.bak  .gitignore  CLAUDE.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  pyproject.toml  run_tests.sh  test_annotations.json  test_history.py  test_history_file.py  test_mcp_screenshot.py  test_script.py  test_sqlite.py  test_zoom.py
.github/workflows/: ci.yml
docs/guides/: CLI_EMBEDDING_IMPLEMENTATION.md  CLI_TEST_VERIFICATION.md  MAGICMOCK_PROHIBITION.md  TASK_LIST_TEMPLATE_GUIDE.md  cli_migration_guide.md
docs/reports/: TASK_001_task_1_screenshot_capture.md  TASK_001_task_2_ai_description.md
docs/tasks/: IMPROVEMENT_PLAN.md  TASK_001_MCP_SCREENSHOT_VERIFICATION.md  TASK_002_MCP_SCREENSHOT_IMPROVEMENTS.md
examples/: multimodal_analysis_examples.md  text_extraction_examples.md
src/mcp_screenshot/: __init__.py  __main__.py
src/mcp_screenshot/cli/: __init__.py  formatters.py  granger_slash_mcp_mixin.py  main.py  validators.py
src/mcp_screenshot/core/: __init__.py  annotate.py  batch.py  cache.py  capture.py  chunked_capture.py  chunked_capture_fixed.py  compare.py  constants.py  d3_verification.py  description.py  history.py  image_similarity.py  litellm_cache.py  playwright_capture.py  utils.py
src/mcp_screenshot/integrations/: __init__.py  mcp_screenshot_module.py
src/mcp_screenshot/mcp/: __init__.py  mcp_screenshot_prompts.py  prompts.py  server.py  tools.py
tests/: __init__.py  test_annotation.py  test_batch.py  test_cli_improvements.py  test_image_similarity.py  test_litellm_cache.py  test_mcp_screenshot.py  test_zoom.py  test_zoom_visual.py
