[project]
name = "mcp-screenshot"
version = "0.1.0"
description = "MCP Screenshot tool for AI-powered image analysis and verification"
authors = [{name = "Graham Anderson", email = "graham@grahama.co"}]"
dependencies = [
    "fastmcp>=0.1.0",
    "mss>=9.0.1",
    "Pillow>=10.0.0",
    "litellm>=1.41.0",
    "redis>=5.0.0",
    "typer[all]"
    "claude-test-reporter @ git+https://github.com/grahama1970/claude-test-reporter.git@main",>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.2",
    "pyautogui>=0.9.53",
    "selenium>=4.0.0",
    "uvloop>=0.17.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-cloud-aiplatform>=1.0.0",
]

[project.scripts]"
mcp-screenshot = "mcp_screenshot.cli.main:app"

[project.entry-points.mcp]"
screenshot = "mcp_screenshot.mcp.server:main"

[build-system]"
requires = ["setuptools>=45", "wheel"]"
build-backend = "setuptools.build_meta"

[tool.setuptools]"
packages = ["mcp_screenshot"]"
package-dir = {"" = "src"}