[project]
name = "mcp-screenshot"
version = "0.1.0"
description = "MCP Screenshot tool for AI-powered image analysis and verification"
authors = [{name = "Graham Anderson", email = "graham@grahama.co"}]
dependencies = [
    "fastmcp>=0.1.0",
    "mss>=9.0.1",
    "Pillow>=10.0.0",
    "litellm>=1.41.0",
    "redis>=5.0.0",
    "typer[all]>=0.9.0",
    "claude-test-reporter @ git+https://github.com/grahama1970/claude-test-reporter.git@main",
    "rich>=13.0.0",
    "loguru>=0.7.2",
    "pyautogui>=0.9.53",
    "selenium>=4.0.0",
    "uvloop>=0.17.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-cloud-aiplatform>=1.0.0",
    "imagehash>=4.3.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "aiohttp>=3.11.18",
]

[project.scripts]
mcp-screenshot = "mcp_screenshot.cli.main:app"

[project.entry-points.mcp]
screenshot = "mcp_screenshot.mcp.server:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_screenshot", "mcp_screenshot.core", "mcp_screenshot.cli", "mcp_screenshot.integrations", "mcp_screenshot.mcp"]
package-dir = {"" = "src"}

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-json-report>=1.5.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-timeout>=2.1.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -v
    --json-report
    --json-report-file=test-report.json
    --json-report-indent=2
    --tb=short
    --strict-markers
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    --asyncio-mode=auto
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
